# ChangeLog for app-misc/sonypid
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/sonypid/ChangeLog,v 1.3 2002/11/02 20:46:48 hanno Exp $

*sonypid-1.3 (02 Nov 2002)

  02 Nov 2002; Hanno Boeck <hanno@gentoo.org> sonypid-1.3.ebuild :
  
  Updated version.

*sonypid-1.2 (13 Oct 2002)

  13 Oct 2002; Hanno Boeck <hanno@gentoo.org> sonypid-1.2.ebuild :
  
  Updated version.

*sonypid-20010123 (03 Jul 2002)

  03 Jul 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog
  files/digest-sonypid-20010123 :

  Chad Huneycutt <chadh@gentoo.org> actually added this package submitted by
  hanno@gmx.de (Hanno Boeck) in bug #2972