@@ -1,1 +1,0 @@
-MD5 4a1ddafa1a9ec2684396db1a9101b719 sonypid-1.2.tar.bz2 2264
