@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/sonypid/sonypid-1.3.ebuild,v 1.1 2002/11/02 20:46:48 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/sonypid/sonypid-1.3.ebuild,v 1.2 2002/11/17 22:04:54 hanno Exp $
 
 S=${WORKDIR}/${P}
 DESCRIPTION="sonypid - a tool to use the Sony Vaios jog-dial as a mouse-wheel"
@@ -10,7 +10,7 @@ SRC_URI="http://download.alcove-labs.org/software/sonypi/${P}.tar.bz2"
 IUSE=""
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86 -ppc -sparc -sparc64"
+KEYWORDS="x86 -ppc -sparc -sparc64"
 
 DEPEND="virtual/x11"
 
